package com.constructflow.service.mediator.allocation;

public interface AllocationMediator {
    void allocate(AllocationCommand command);
}
