@startuml mediator_allocation
title Mediator -- Resource-allocation workflow

skinparam classAttributeIconSize 0
skinparam backgroundColor white

interface AllocationMediator {
  + allocate(command : AllocationCommand)
}

class DefaultAllocationMediator {
  + allocate(command : AllocationCommand)
}

class ResourceColleague {
  + reserve(command) : Resource
  + categoryOf(resourceId) : String
}

class TaskAllocationColleague {
  + record(command) : TaskAllocation
}

class NotificationColleague {
  + broadcast(command)
}

class AuditColleague {
  + recordAllocation(command, resourceName)
}

class ResourceService <<client>> {
  + allocateResource(taskId, resourceId, qty)
}

class AllocationCommand <<record>> {
  taskId : UUID
  resourceId : UUID
  quantity : double
}

AllocationMediator <|.. DefaultAllocationMediator

DefaultAllocationMediator --> ResourceColleague
DefaultAllocationMediator --> TaskAllocationColleague
DefaultAllocationMediator --> NotificationColleague
DefaultAllocationMediator --> AuditColleague

ResourceService --> AllocationMediator
DefaultAllocationMediator ..> AllocationCommand

note right of DefaultAllocationMediator
  Fixed sequence (business rule):
  1) reserve stock
  2) record allocation row
  3) broadcast event
  4) write audit line
end note

@enduml
